// $Id$

March 2009
----------
 * Drupal.behaviors.mediaBrowserHide (aaron).
 * Drupal.behaviors.mediaGenerateMD5 (aaron).
 * Rename media/ahah path to media/js and remove args (aaron).
 * Refactor ahah (aaron).
 * Attach ahah behavior (aaron).
 * Re-add Add button (aaron).
 * Uppercase for TRUE/FALSE/NULL (aaron).
 * Fix error re. is_null(variable_get...) (aaron).
 * Documentation (aaron).
 * Begin refactor & debug ahah (aaron).
 * Documentation of media_formater_ahah_form (aaron).
 * #377050 - Intelligent Media Defaults (kwinters).

February 2009
-------------
 * Pass URI in ahah submission (aaron).
 * Capitalization (aaron).
 * Use PATHINFO_EXTENSION (aaron).
 * $formatter in media_get_applicable_formatters (aaron).
 * $uri and $file_extension in ahah (aaron).
 * $stream_id to $registration_id (aaron).
 * Roll back $default_files (aaron).

January 2009
------------
 * Add $default_files to form elements (aaron).
 * Add variable_get('media_file_list_size', 10) (aaron).
 * Add experimental hook_elements and relevant themes (aaron).
 * Changed media_active_fields_for_node_type to handle multiple fields per type. (jody)
 * Created settings for the core upload file and fixed settings form name collisions. (jody)
 * Removed system_settings_form from main media admin page which has no settings yet. (jody)
 * Fixed broken logic in media_active_fields_for_node_type. (jody)
 * Made media mover code load only if media mover module_exists. (jody)
 * Added (perhaps temporary) dependency on tabs module (jody).
 * #description sp. (aaron).
 * Documentation changes in media_admin.inc (aaron).
 * Fix PHP error on admin settings page when CCK not enabled (aaron).
 * In media_get_registered_modules, check for NULL static variable (aaron).
 * Add $reset option to media_get_registered_modules (aaron).
 * Change null/true/false to NULL/TRUE/FALSE (aaron).
 * Documentation changes (aaron).
 * Initial development of Media (arthur).