@@ -6,21 +6,20 @@
  */
 
 
- /**
-  * This handles the display, activation and
-  * hiding  of drawers on the media browser form
-  * @TODO make this a drupal behavior
-  */
- $(document).ready( function () {
+/**
+ * This handles the display, activation and
+ * hiding  of drawers on the media browser form.
+ */
+Drupal.behaviors.mediaDrawers = function (context) {
 
   // hide all the drawer display items on page load
-  $('.media.browser .ui-tabs-panel .drawer.display').each(function() {
+  $('.media.browser .ui-tabs-panel .drawer.display:not(.mediaDrawers-processed)', context).addClass('mediaDrawers-processed').each(function() {
     $(this).hide();
   });
 
   // activate all the drawer data display that needs to be show when
   // the page is loaded
-  $('.media.browser .ui-tabs-panel .drawer.display.active').each(function() {
+  $('.media.browser .ui-tabs-panel .drawer.display.active:not(.mediaDrawers-processed)', context).addClass('mediaDrawers-processed').each(function() {
     $(this).show();
   });
 
@@ -28,7 +27,7 @@
   // click actions
 
   // now we need to bind click functionality on drawers to display
-  $('.media.browser .drawers .item-list ul li, .drawers li a').bind('click', function () {
+  $('.media.browser .drawers .item-list ul li:not(.mediaDrawers-processed), .drawers li a:not(.mediaDrawers-processed)', context).addClass('mediaDrawers-processed').bind('click', function () {
     // get the href id that we want to display
     var display_id = $(this).attr('href');
     // this handles the LI click
@@ -45,25 +44,24 @@
     $(this).addClass('active');
     // make the requested drawer display active
     $(display_id).addClass('active').show();
-   });
+    });
 
- });
+};
 
-
- /**
-  * We need to hide any form elements that were replaced by the media browser form
-  * activate the add button, and hide the browser.
-  */
+/**
+ * We need to hide any form elements that were replaced by the media browser form
+ * activate the add button, and hide the browser.
+ */
 Drupal.behaviors.mediaBrowserHide = function (context) {
-   $('.media.browser.wrapper:not(.mediaBrowserHide-processed)', context).addClass('mediaBrowserHide-processed').hide();
-   $('.media.browser.activation:not(.mediaBrowserHide-processed)', context).addClass('mediaBrowserHide-processed').each(function () {
-     $(this).next('.media.browser').hide();
-     $(this).click(function () {
-       $(this).next('.media.browser').slideDown('slow');
-       $(this).slideUp();
-     });
-   });
- };
+  $('.media.browser.wrapper:not(.mediaBrowserHide-processed)', context).addClass('mediaBrowserHide-processed').hide();
+  $('.media.browser.activation:not(.mediaBrowserHide-processed)', context).addClass('mediaBrowserHide-processed').each(function () {
+    $(this).next('.media.browser').hide();
+    $(this).click(function () {
+      $(this).next('.media.browser').slideDown('slow');
+      $(this).slideUp();
+    });
+  });
+};
 
 /**
  * Generate a MD5 hash of the file being uploaded
